k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: mibanco-svc
spec:
  selector:
    app: mibanco
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
